@@ -1,0 +1,4 @@
+.. comment: generated by t_event_control_star_never_bad
+.. code-block:: sv
+
+     always @* a = 100;
