@@ -1,0 +1,4 @@
+.. comment: generated by t_event_control_star_never_bad
+.. code-block::
+
+   %Warning-ALWNEVER: example.v:1:3 'always @*' will never execute as expression list is empty (no variables read)
